# amplifier-collection-spec-kit

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
agents/: constitutional-guardian.md  implementation-guide.md  plan-architect.md  requirement-clarifier.md  research-architect.md  spec-critic.md  spec-smith.md  task-decomposer.md
context/constitution/: core-rules.md  spec-requirements.md
context/examples/specifications/: auth-api-example.md
profiles/: implementer.md  planner.md  spec-writer.md
spec_kit/: __init__.py  pyproject.toml
