[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-kit"
version = "1.0.0"
description = "Specification-Driven Development workflow collection for Amplifier"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Brian Krabach", email = "robotdad@users.noreply.github.com"}
]

[project.urls]
repository = "https://github.com/robotdad/amplifier-collection-spec-kit"
documentation = "https://github.com/robotdad/amplifier-collection-spec-kit#readme"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
"*" = ["*.md", "*.toml"]

[tool.amplifier.collection]
author = "robotdad"
capabilities = [
    "Specification-driven development workflow with constitutional governance",
    "Formal specification creation with template-driven constraints",
    "Multi-phase workflow (ideate → specify → clarify → plan → implement)",
    "Constitutional validation ensuring quality and consistency",
    "Rich artifact generation (specs, plans, tasks, research, data models)"
]

[tool.amplifier.collection.requires]
foundation = "^1.0.0"
